--- a/src/app/inner-menu/inner-menu.component.html
+++ b/src/app/inner-menu/inner-menu.component.html
@@ -1,9 +1,10 @@
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
-    <app-sidenav (sidenavClose)="sidenav.close()"></app-sidenav>
+    <app-inner-sidenav (sidenavClose)="sidenav.close()">
+    </app-inner-sidenav>
   </mat-sidenav>
   <mat-sidenav-content>
-    <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
+    <app-inner-header (sidenavToggle)="sidenav.toggle()"></app-inner-header>
     <main>
       <router-outlet></router-outlet>
     </main>
