Innermenu Dynamic Heading

--- a/src/app/inner-menu/header/header.component.html
+++ b/src/app/inner-menu/header/header.component.html
@@ -2,7 +2,7 @@
   <button mat-icon-button (click)="onToggleSidenav()">
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Inner menu</span>
+  <span>{{menuName}}</span>
   <span class="example-spacer"></span>
   <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
     <mat-icon>favorite</mat-icon>
