--- a/src/app/inner-menu/inner-menu.component.html
+++ b/src/app/inner-menu/inner-menu.component.html
@@ -2,11 +2,12 @@
 
   <mat-sidenav-container fxFlex.lt-md='90' fxFlex.md='90' fxFlex.gt-md='80'>
     <mat-sidenav #sidenav role="navigation">
-      <app-inner-sidenav (sidenavClose)="sidenav.close()">
+      <app-inner-sidenav (sidenavClose)="sidenav.close()" (manuName)='setMenuName($event)'>
       </app-inner-sidenav>
     </mat-sidenav>
     <mat-sidenav-content>
-      <app-inner-header (sidenavToggle)="sidenav.toggle()"></app-inner-header>
+      <app-inner-header (sidenavToggle)="sidenav.toggle()" [menuName]='menuName'></app-inner-header>
+
       <main>
         <router-outlet></router-outlet>
       </main>
