--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -3,8 +3,12 @@
     <mat-icon>home</mat-icon> <span class="nav-caption">Home</span>
   </a>
   <a mat-list-item routerLink="/innermenu" (click)="onSidenavClose()">
-    <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Inner Menu</span>
+    <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">InnerMenu</span>
   </a>
+  <a mat-list-item routerLink="/innertabmenu" (click)="onSidenavClose()">
+    <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">TabMenu</span>
+  </a>
+
 
   <!-- <a mat-list-item routerLink="#" (click)="onSidenavClose()">
     <mat-icon>account_balance</mat-icon><span class="nav-caption">Account Actions</span>
